src/objects/StatementParams__c.object
<CustomObject>
    <description>Custom object used for Statement parameters</description>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <defaultValue>DATE(2009,1,1)</defaultValue>
        <label>Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placement_Id__c</fullName>
        <label>Placement Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>StatementParams</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StatementParams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_digits</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Placement_Id__c , &quot;\\D&quot;)</errorConditionFormula>
        <errorDisplayField>Placement_Id__c</errorDisplayField>
        <errorMessage>Placement Id can only contain digits</errorMessage>
    </validationRules>
</CustomObject>